CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0..3.20.1)
PROJECT(move_semantics)

SET(CMAKE_BUILD_TYPE Release)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(SOURCES_CPP "src/main.cpp")

ADD_EXECUTABLE(move_semantics ${SOURCES_CPP})

INSTALL(TARGETS move_semantics DESTINATION /usr/local/bin)
